# ROSproject

./: .gitignore  README.md
edo/implementation/: .~lock.edo_dimensions.ods#  edo_dimensions.ods
edo/implementation/controller_edo/config/: controller_joint_params.yaml  planner_cartesian_params.yaml  planner_joint_params.yaml
edo/implementation/controller_edo/include/: PIDcontrol.h  cartesian_planning.h
edo/implementation/controller_edo/launch/: controller_cartesian_planner.launch  controller_joint_planner.launch  planner_cartesian.launch  planner_joint.launch
edo/implementation/controller_edo/scripts/: plotData_control_cartesian_planner.py  plotData_control_joint_planner.py  plotData_planning_cartesian.py  plotData_planning_joint.py
edo/implementation/controller_edo/src/: PIDcontrol.cpp  controller_joint.cpp  joint_planning_trapezoidal.cpp  planner_cartesian.cpp
edo/implementation/simulator_edo/: CMakeLists.txt  package.xml
edo/implementation/simulator_edo/launch/: display.launch  dynamic_simulation.launch  kinematic_simulation.launch
edo/implementation/simulator_edo/matlab/: dynsim_3link_planar.slx  init_3link_planar.m  init_6link_edo.m  kinsim_3link_planar.slx  (+1 more)
esercizio1/src/pub_sub_1/: CMakeLists.txt
esercizio1/src/pub_sub_1/src/: publisher.cpp  subscriber.cpp
esercizio2/simulator_3link_planar/: package.xml
esercizio2/simulator_3link_planar/launch/: dynamic_simulation.launch  kinematic_simulation.launch
esercizio2/simulator_3link_planar/matlab/: dynsim_3link_planar.slxc  kinsim_3link_planar.slx  kinsim_3link_planar.slxc  kinsim_3link_planar.tgz
(+165 files in other folders)
